# dlopen

./: .pre-commit-config.yaml  CMakeLists.txt  README.md  build.sh  english.c  francais.cpp  main.cpp  python.cpp
